# Async_API_sprint_1

./: docker-compose.yml  dump.sql
etl/: Dockerfile  backoff.py  etl_process_data.py  extract.py  indices.py  load.py  log.py  models.py  queries.py  requirements.txt  settings.py  transform.py
etl/state/: etl_state.py  redis_state_storage.py
src/: .env.example  .gitignore  Dockerfile  pyproject.toml  start.sh
src/api/v1/: films.py  genres.py  persons.py
src/core/: config.py  main.py
src/db/: elastic.py
src/models/: film.py  genre.py  person.py
src/service/: genres.py
src/services/: film.py  persons.py
tests/functional/: Dockerfile  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  settings.py
tests/functional/utils/: wait_for_es.py  wait_for_redis.py
